--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<div class="outer-hello">
 			<div class="text-hello">
-	            <h1>Our strong<br> organaisation</h1>
+	            <h1>NOT<br>COMPLETED</h1>
 	            <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
 	            <a class="contact-link" href="">Contact Us</a>
 			</div>
